final commit before hosting

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 A digital platform that bridges the gap between event
                 organizers, service vendors, and promotional staff
               </p>
-              <a href="#" class="project-link">View Project</a>
+              <a href="https://github.com/deannihilator/ACME-Inc" target="_blank" class="project-link">View Project</a>
             </div>
           </div>
           <!-- Project 2 -->
@@ -134,7 +134,7 @@
                 values between multiple global currencies with real-time
                 exchange rates.
               </p>
-              <a href="#" class="project-link">View Project</a>
+              <a href="https://github.com/deannihilator/Currency-Converter" target="_blank" class="project-link">View Project</a>
             </div>
           </div>
           <!-- Project 3 -->
@@ -282,7 +282,7 @@
           <div class="footer-section">
             <h3>Contact Info</h3>
             <p>
-              Email: <a href="mailto:info@example.com">info@asenterprise.com</a>
+              Email: <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">sharmaanimesh2004@gmail.com</a>
             </p>
             <p>Phone: <a href="tel:+1234567890">+91 9144147151</a></p>
           </div>
